# CAA_Labo2

./: .gitignore  CAA_Labo2.md  Cargo.toml  README.md
src/: main.rs  process.rs
src/client/: client.rs
src/client/files/: 2.txt  3.txt  hello.txt
src/elements/: challenge.rs  files.rs  google_secret.rs  mod.rs  user.rs
src/server/: server.rs  two_factors.json
src/server/files/: 3.txt.json  3HUGwFQIhrtt81ILGLzJ3z8vhE1v.json  QCjOiGNc5vg49rkoDiqgfPFAVZj+.json  aznHE0Id7dnsgSalTDrqwBXmpbs5.json  bqtAEWZW8SvnXOJDLiUNvt2Ogz7b.json  eVGgxKSt52lgspc24qsuFOa5jMOV.json  g1YmGRXNI3zTe6noVCgoWNcCq9Yj.json  igX2PNCcP9r6hPcc5lu4CimnpESo.json  wOSO6C7JSixK1453RZeDu330+m9c.json  y0rSp38DpkqTPDFJATQD7VkJw1A7.json
src/server/vault/: QCjOiGNc5vg49rkoDiqgfPFAVZj+  aznHE0Id7dnsgSalTDrqwBXmpbs5  bqtAEWZW8SvnXOJDLiUNvt2Ogz7b  eVGgxKSt52lgspc24qsuFOa5jMOV  igX2PNCcP9r6hPcc5lu4CimnpESo  test.txt  wOSO6C7JSixK1453RZeDu330+m9c  y0rSp38DpkqTPDFJATQD7VkJw1A7
src/validation/: validation.rs
