[package]
name = "caa_labo2"
version = "0.1.0"
authors = ["kurisukun <barroshenriques.chris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8.4"
lazy_static = "1.4.0"
google-authenticator = "0.2.1"
sodiumoxide = "0.2.6"
rand = "0.8.0"
rand_core = "0.6.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
regex = "1"
strum = "0.20.0"
strum_macros = "0.20"
aead = "0.2.0"
aes-gcm = "0.3.0"
base64 = "0.13.0"